12662 smbios(1M) interprets jedec IDs incorrectly 12664 fix smbios memory technology operating mode capabilities Reviewed by: Yuri Pankov <ypankov@fastmail.com> Reviewed by: Toomas Soome <toomas@me.com> Reviewed by: Paul Winder <paul@winders.demon.co.uk> Reviewed by: Gergo Doma <domag02@gmail.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>